# dynamic_logging_library

./: .makefile  CMakeLists.txt  LICENSE  README.md
scr/: logger.cpp  logger.h
src/: logger.cpp  logger.h  main.cpp
src/test/: logging_system_tests.cpp
srс/: logger.cpp  logger.h
